    - Improved directory tree search to take advantage of new background
      file scanning. It is now instantaneously quick (ADAMK)
    - Added the PPI::Cache API to provide a simple common mechanism for
      stashing GUI model data such that all cache data can be cleaned up in
      one go when the relevant project or document is released (ADAMK)

0.64 2010.06.12
    - Last Stable before merge of new Task 2.0 API
    - zh-cn translation updated (jagd)

0.63 2010.06.02
    - Autocomplete "sub new" for Perl modules (SEWI)
    - fixed ticket #956: crashes if Outline is active (ZENOG)

0.62 2010.05.21
    - Any 3 column table layout in the preferences dialog now has a 
      stretched middle column. (PLAVEN)
    - Add a warning for versions of Wx.pm with broken HTML rendering
      (ZENOG)
    - Mousing over a sub/method name with ctrl pressed now highlights it
      to indicate it can be clicked on (Sam Crawley) 
    - Regex editor: Support global flag for substitute (ZENOG)
    - Updated Turkish translation (Burak Gürsoy)
 
0.61 2010.05.12
    - MIME types: added a few C++ file extensions, added LaTeX .sty files
      (Zeno Gantner)
    - About dialog: increase height of the window so that the translated
      licensing terms also fit in without a scrollbar (Zeno Gantner)
    - Debugger: improved variable detection in the document (Zeno Gantner)
    - Menu: More consistent capitalization of menu entries (Zeno Gantner)
    - Updated German translation (Zeno Gantner)
    - fixed ticket #538: "outline view info takes too long to refresh" by
      adding an outline cache (Zeno Gantner)
    - fixed ticket #541: "wrong outline can get displayed for a document"
      (Zeno Gantner)
    - fixed ticket #940: "crashes when right clicking in code editing area"
      (Zeno Gantner)
    - fixed ticket #878: "Tabs like 'Outline', 'Functions'... should have
      a close button, just like the documents tabs" (Zeno Gantner)