@@ -39,6 +39,8 @@ NOTE: Do not "tidy" or change the indenting here, or we break svn annotate
     - Added the PPI::Cache API to provide a simple common mechanism for
       stashing GUI model data such that all cache data can be cleaned up in
       one go when the relevant project or document is released (ADAMK)
+    - Fixing some new bugs or adding temporary workarounds for them (SEWI)
+    - Rebuild History using non-blocking IO on Padre start (SEWI)
 
 0.64 2010.06.12
     - Last Stable before merge of new Task 2.0 API
